--- a/src/DotNetRevolution.EventSourcing.Sql/DotNetRevolution.EventSourcing.Sql.csproj
+++ b/src/DotNetRevolution.EventSourcing.Sql/DotNetRevolution.EventSourcing.Sql.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlDomainEvent.cs" />
     <Compile Include="SqlEventStore.cs" />
+    <Compile Include="SqlSnapshot.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
