--- a/tests/DotNetRevolution.Test.EventStoreDomain/DotNetRevolution.Test.EventStoreDomain.csproj
+++ b/tests/DotNetRevolution.Test.EventStoreDomain/DotNetRevolution.Test.EventStoreDomain.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Account\DomainEvent\DebitApplied.cs" />
     <Compile Include="Account\Exceptions\CreditDeclinedException.cs" />
     <Compile Include="Account\Exceptions\DebitDeclinedException.cs" />
+    <Compile Include="Account\Snapshots\AccountSnapshot.cs" />
+    <Compile Include="Account\Snapshots\AccountSnapshotProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,9 +72,7 @@
       <Name>DotNetRevolution.EventSourcing</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Account\Snapshots\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
