--- a/src/DotNetRevolution.ShuttleESB/DotNetRevolution.ShuttleESB.csproj
+++ b/src/DotNetRevolution.ShuttleESB/DotNetRevolution.ShuttleESB.csproj
@@ -102,15 +102,15 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Shuttle.Core.Data, Version=3.2.12.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\shuttle-core-data.3.2.12\lib\net461-full\Shuttle.Core.Data.dll</HintPath>
+      <HintPath>..\..\packages\shuttle-core-data.3.2.12\lib\net461-full\Shuttle.Core.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Shuttle.Core.Infrastructure, Version=4.1.9.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\shuttle-core-infrastructure.4.1.9\lib\net461-full\Shuttle.Core.Infrastructure.dll</HintPath>
+      <HintPath>..\..\packages\shuttle-core-infrastructure.4.1.9\lib\net461-full\Shuttle.Core.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Shuttle.ESB.Core, Version=5.1.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\shuttle-esb-core.5.1.4\lib\net461-full\Shuttle.ESB.Core.dll</HintPath>
+      <HintPath>..\..\packages\shuttle-esb-core.5.1.4\lib\net461-full\Shuttle.ESB.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
