--- a/src/DotNetRevolution.EventSourcing/DotNetRevolution.EventSourcing.csproj
+++ b/src/DotNetRevolution.EventSourcing/DotNetRevolution.EventSourcing.csproj
@@ -81,6 +81,9 @@
     <Compile Include="CodeContract\EventProviderContract.cs" />
     <Compile Include="CodeContract\EventProviderContract`1.cs" />
     <Compile Include="CodeContract\EventStoreContract.cs" />
+    <Compile Include="Commanding\AnnounceTransactionCommand.cs" />
+    <Compile Include="Commanding\CodeContract\EventStoreCommandHandlerContract.cs" />
+    <Compile Include="Commanding\EventStoreCommandHandler.cs" />
     <Compile Include="EventProviderNotFoundException.cs" />
     <Compile Include="EventStreamDomainEventCollection.cs" />
     <Compile Include="IEventStreamDomainEventCollection.cs" />
@@ -142,7 +145,9 @@
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Messaging\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
