making transaction only take one aggregate root at a time. removed TransactionEventProvider. removed current state columns. changed clustered indexes. changes procs for above changes. added type factories so type id's can be hashed and passed into sql server.

--- a/tests/DotNetRevolution.Test.EventStourcing.Sql/App.config
+++ b/tests/DotNetRevolution.Test.EventStourcing.Sql/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="SqlEventStore" connectionString="data source=(localdb)\ProjectsV13;initial catalog=DotNetRevolution.EventSourcing.Database;integrated security=True;MultipleActiveResultSets=True;App=DotNetRevolution.Test.EventSourcing.Sql" providerName="System.Data.SqlClient" />
+    <add name="SqlEventStore" connectionString="data source=localhost;initial catalog=EventStore;integrated security=True;MultipleActiveResultSets=True;App=DotNetRevolution.Test.EventSourcing.Sql" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
