--- a/src/DotNetRevolution.EventSourcing/DotNetRevolution.EventSourcing.csproj
+++ b/src/DotNetRevolution.EventSourcing/DotNetRevolution.EventSourcing.csproj
@@ -78,6 +78,12 @@
     <Compile Include="..\.SolutionItems\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="CodeContract\TypeFactoryContract.cs" />
+    <Compile Include="DefaultTypeFactory.cs" />
+    <Compile Include="Hashing\CodeContract\HashProviderContract.cs" />
+    <Compile Include="Hashing\IHashProvider.cs" />
+    <Compile Include="Hashing\MD5HashProvider.cs" />
+    <Compile Include="ITypeFactory.cs" />
     <Compile Include="CodeContract\EventProviderContract.cs" />
     <Compile Include="CodeContract\EventProviderContract`1.cs" />
     <Compile Include="CodeContract\EventStoreContract.cs" />
@@ -132,9 +138,9 @@
     <Compile Include="Snapshotting\VersionSnapshotPolicy.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="EventProviderVersion.cs" />
-    <Compile Include="TransactionCommandType.cs" />
     <Compile Include="TransactionEventSequence.cs" />
     <Compile Include="TransactionEventType.cs" />
+    <Compile Include="TypeNotFoundForHashException.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotNetRevolution.Core\DotNetRevolution.Core.csproj">
