--- a/src/DotNetRevolution.Ninject.Serilog/packages.config
+++ b/src/DotNetRevolution.Ninject.Serilog/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
-  <package id="Serilog" version="1.5.14" targetFramework="net461" />
-  <package id="Serilog.Sinks.Email" version="1.5.37" targetFramework="net461" />
-  <package id="Serilog.Sinks.MSSqlServer" version="3.0.52" targetFramework="net461" />
+  <package id="Serilog" version="2.1.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Email" version="2.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.MSSqlServer" version="4.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.0.0" targetFramework="net461" />
 </packages>
