--- a/src/DotNetRevolution.EventSourcing.Announcer/packages.config
+++ b/src/DotNetRevolution.EventSourcing.Announcer/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Shuttle.Core.Data" version="4.2.0" targetFramework="net461" />
+  <package id="Shuttle.Core.Host" version="3.2.14" targetFramework="net461" />
   <package id="Shuttle.Core.Infrastructure" version="4.2.2" targetFramework="net461" />
   <package id="Shuttle.Esb" version="6.2.1" targetFramework="net461" />
-  <package id="shuttle-core-data" version="3.2.12" targetFramework="net461" />
+  <package id="Shuttle.Esb.SqlServer" version="6.0.8" targetFramework="net461" />
   <package id="shuttle-core-infrastructure" version="4.1.9" targetFramework="net461" />
 </packages>
