--- a/src/DotNetRevolution.Logging.Serilog/packages.config
+++ b/src/DotNetRevolution.Logging.Serilog/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Serilog" version="1.5.14" targetFramework="net452" />
-  <package id="Serilog.Sinks.Email" version="1.5.37" targetFramework="net452" />
+  <package id="Serilog" version="2.1.0" targetFramework="net461" />
+  <package id="Serilog.Enrichers.Environment" version="2.1.0" targetFramework="net461" />
+  <package id="Serilog.Enrichers.Process" version="2.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Email" version="2.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="2.2.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.RollingFile" version="2.2.0" targetFramework="net461" />
 </packages>
