removed snapshots. refactored api for event store to be more EventStream centric instead of EventProvider.

--- a/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
+++ b/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Base\Disposable.cs" />
     <Compile Include="Base\ImplicitUseKinds.cs" />
     <Compile Include="Base\ImplicitUseTargets.cs" />
+    <Compile Include="Domain\IRepository.cs" />
     <Compile Include="GuidGeneration\CodeContract\GuidGeneratorContract.cs" />
     <Compile Include="GuidGeneration\GuidGenerator.cs" />
     <Compile Include="GuidGeneration\SequentialGuidType.cs" />
