--- a/tests/DotNetRevolution.Test.EventStourcing.Sql/DotNetRevolution.Test.EventStourcing.Sql.csproj
+++ b/tests/DotNetRevolution.Test.EventStourcing.Sql/DotNetRevolution.Test.EventStourcing.Sql.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="EventProviderRepositoryTests.cs" />
     <Compile Include="SqlEventStoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
