break out sequentialguid into separate classes

--- a/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
+++ b/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
@@ -94,7 +94,11 @@
     <Compile Include="Base\ImplicitUseTargets.cs" />
     <Compile Include="Domain\IRepository.cs" />
     <Compile Include="GuidGeneration\CodeContract\GuidGeneratorContract.cs" />
+    <Compile Include="GuidGeneration\CodeContract\SequentialGuidGeneratorContract.cs" />
     <Compile Include="GuidGeneration\GuidGenerator.cs" />
+    <Compile Include="GuidGeneration\SequentialAsBytesGuidGenerator.cs" />
+    <Compile Include="GuidGeneration\SequentialAsStringGuidGenerator.cs" />
+    <Compile Include="GuidGeneration\SequentialAtEndGuidGenerator.cs" />
     <Compile Include="GuidGeneration\SequentialGuidType.cs" />
     <Compile Include="Base\UsedImplicitlyAttribute.cs" />
     <Compile Include="Commanding\CodeContract\CommandCatalogContract.cs" />
@@ -153,10 +157,9 @@
     <Compile Include="Domain\IDomainEventHandler.cs" />
     <Compile Include="Domain\IDomainEventHandlerCollection.cs" />
     <Compile Include="Domain\IDomainEventHandlerFactory.cs" />
-    <Compile Include="GuidGeneration\SequentialGuid.cs" />
+    <Compile Include="GuidGeneration\SequentialGuidGenerator.cs" />
     <Compile Include="Domain\IDomainEventHandler`1.cs" />
     <Compile Include="GuidGeneration\IGuidGenerator.cs" />
-    <Compile Include="GuidGeneration\SequentialGenerator.cs" />
     <Compile Include="Domain\ValueObject.cs" />
     <Compile Include="Extension\DictionaryExtension.AsReadOnly.cs" />
     <Compile Include="Extension\DictionaryExtension.ToString.cs" />
