many changes to add repository, command handler, state tracking, and aggregate root/state builders

--- a/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
+++ b/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
@@ -92,7 +92,24 @@
     <Compile Include="Base\Disposable.cs" />
     <Compile Include="Base\ImplicitUseKinds.cs" />
     <Compile Include="Base\ImplicitUseTargets.cs" />
+    <Compile Include="Commanding\AggregateRootCommand.cs" />
+    <Compile Include="Commanding\CodeContract\RepositoryContract.cs" />
+    <Compile Include="Commanding\IAggregateRootCommand.cs" />
+    <Compile Include="Commanding\IRepository.cs" />
+    <Compile Include="Commanding\RepositoryCommandHandler.cs" />
+    <Compile Include="Domain\AggregateRootBuilder.cs" />
+    <Compile Include="Domain\AggregateRootState.cs" />
+    <Compile Include="Domain\AggregateRootStateBuilder.cs" />
+    <Compile Include="Domain\AggregateRoot`1.cs" />
+    <Compile Include="Domain\CodeContract\AggregateRootBuilderContract.cs" />
+    <Compile Include="Domain\CodeContract\AggregateRootStateBuilderContract.cs" />
+    <Compile Include="Domain\CodeContract\RepositoryContract.cs" />
+    <Compile Include="Domain\IAggregateRootBuilder.cs" />
+    <Compile Include="Domain\IAggregateRootState.cs" />
+    <Compile Include="Domain\IAggregateRootStateBuilder.cs" />
+    <Compile Include="Domain\IAggregateRoot`1.cs" />
     <Compile Include="Domain\IRepository.cs" />
+    <Compile Include="Domain\IStateTracker.cs" />
     <Compile Include="GuidGeneration\CodeContract\GuidGeneratorContract.cs" />
     <Compile Include="GuidGeneration\GuidGenerator.cs" />
     <Compile Include="GuidGeneration\SequentialGuidType.cs" />
@@ -233,6 +250,11 @@
     <Compile Include="Querying\QueryHandler.cs" />
     <Compile Include="Querying\QueryHandlerFactory.cs" />
     <Compile Include="Querying\QueryHandlingException.cs" />
+    <Compile Include="Reflection\CodeContract\MethodInvokerContract.cs" />
+    <Compile Include="Reflection\IMethodInvoker.cs" />
+    <Compile Include="Reflection\MethodInvoker.cs" />
+    <Compile Include="Reflection\NamedMethodInvoker.cs" />
+    <Compile Include="Reflection\StartsWithMethodInvoker.cs" />
     <Compile Include="Serialization\BinarySerializer.cs" />
     <Compile Include="Serialization\CodeContract\SerializerCodeContract.cs" />
     <Compile Include="Serialization\ISerializer.cs" />
