--- a/src/DotNetRevolution.EventSourcing/DotNetRevolution.EventSourcing.csproj
+++ b/src/DotNetRevolution.EventSourcing/DotNetRevolution.EventSourcing.csproj
@@ -78,26 +78,27 @@
     <Compile Include="..\.SolutionItems\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="CodeContract\EventProviderRepositoryContract.cs" />
     <Compile Include="CodeContract\EventStreamContract.cs" />
+    <Compile Include="CodeContract\EventStreamProcessorContract.cs" />
     <Compile Include="CodeContract\TypeFactoryContract.cs" />
     <Compile Include="DefaultUsernameProvider.cs" />
     <Compile Include="DefaultTypeFactory.cs" />
-    <Compile Include="EventProviderRepository.cs" />
+    <Compile Include="DomainEventRevision.cs" />
+    <Compile Include="EventStoreRepository.cs" />
+    <Compile Include="EventStreamProcessor.cs" />
     <Compile Include="EventStreamRevision.cs" />
-    <Compile Include="IEventProviderRepository.cs" />
+    <Compile Include="EventStreamStateTracker.cs" />
+    <Compile Include="IEventStreamProcessor.cs" />
+    <Compile Include="IEventStreamRevision.cs" />
     <Compile Include="ITypeFactory.cs" />
     <Compile Include="CodeContract\EventProviderContract.cs" />
     <Compile Include="CodeContract\EventProviderContract`1.cs" />
     <Compile Include="CodeContract\EventStoreContract.cs" />
     <Compile Include="Commanding\AnnounceTransactionCommand.cs" />
-    <Compile Include="Commanding\CodeContract\EventStoreCommandHandlerContract.cs" />
-    <Compile Include="Commanding\EventStoreCommandHandler.cs" />
     <Compile Include="EventProviderNotFoundException.cs" />
-    <Compile Include="AggregateRoot\CodeContract\AggregateRootProcessorContract.cs" />
-    <Compile Include="AggregateRoot\CodeContract\AggregateRootProcessorFactoryContract.cs" />
     <Compile Include="IEventStream.cs" />
     <Compile Include="IUsernameProvider.cs" />
+    <Compile Include="Snapshotting\SnapshotRevision.cs" />
     <Compile Include="Snapshotting\CodeContract\SnapshotPolicyContract.cs" />
     <Compile Include="Snapshotting\CodeContract\SnapshotPolicyFactoryContract.cs" />
     <Compile Include="DomainEventSerializationException.cs" />
@@ -108,8 +109,6 @@
     <Compile Include="EventStore.cs" />
     <Compile Include="EventStream.cs" />
     <Compile Include="EventStreamCollection.cs" />
-    <Compile Include="AggregateRoot\AggregateRootProcessor.cs" />
-    <Compile Include="AggregateRoot\AggregateRootProcessorMap.cs" />
     <Compile Include="IEventProvider.cs" />
     <Compile Include="IEventProvider`1.cs" />
     <Compile Include="Snapshotting\CodeContract\SnapshotProviderContract.cs" />
@@ -118,14 +117,8 @@
     <Compile Include="Snapshotting\ExplicitVersionSnapshotPolicy.cs" />
     <Compile Include="Snapshotting\Snapshot.cs" />
     <Compile Include="Snapshotting\ISnapshotPolicyFactory.cs" />
-    <Compile Include="AggregateRoot\MappedAggregateRootProcessor.cs" />
-    <Compile Include="AggregateRoot\OnConventionAggregateRootProcessor.cs" />
-    <Compile Include="AggregateRoot\SingleMethodAggregateRootProcessor.cs" />
-    <Compile Include="AggregateRoot\AggregateRootProcessorFactory.cs" />
     <Compile Include="EventStoreException.cs" />
     <Compile Include="IEventStore.cs" />
-    <Compile Include="AggregateRoot\IAggregateRootProcessor.cs" />
-    <Compile Include="AggregateRoot\IAggregateRootProcessorFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Snapshotting\ISnapshotPolicy.cs" />
     <Compile Include="Snapshotting\ISnapshotProvider.cs" />
