--- a/tests/DotNetRevolution.Core.Tests/DotNetRevolution.Core.Tests.csproj
+++ b/tests/DotNetRevolution.Core.Tests/DotNetRevolution.Core.Tests.csproj
@@ -55,6 +55,10 @@
   <ItemGroup>
     <Compile Include="Base\SequentialGuidTests.cs" />
     <Compile Include="Domain\DomainEventHandlerFactoryTests.cs" />
+    <Compile Include="Hashing\HashProviderTests.cs" />
+    <Compile Include="Hashing\MD5HashProviderTests.cs" />
+    <Compile Include="Mock\MethodClass.cs" />
+    <Compile Include="Mock\MethodClassParameter.cs" />
     <Compile Include="Querying\QueryCatalogTests.cs" />
     <Compile Include="Querying\QueryDispatcherTests.cs" />
     <Compile Include="Querying\QueryHandlerFactoryTests.cs" />
@@ -82,6 +86,9 @@
     <Compile Include="Mock\Query1.cs" />
     <Compile Include="Mock\Query2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reflection\MethodInvokerTests.cs" />
+    <Compile Include="Reflection\NamedMethodInvokerTests.cs" />
+    <Compile Include="Reflection\StartsWithMethodInvokerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\DotNetRevolution.Core\DotNetRevolution.Core.csproj">
