adding TPL to commands and event store

--- a/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
+++ b/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
@@ -108,16 +108,19 @@
     <Compile Include="Domain\AggregateRootBuilder.cs" />
     <Compile Include="Domain\AggregateRootState.cs" />
     <Compile Include="Domain\AggregateRootStateBuilder.cs" />
+    <Compile Include="Domain\AggregateRootSynchronizationContext.cs" />
     <Compile Include="Domain\AggregateRootSynchronizer.cs" />
     <Compile Include="Domain\AggregateRoot`1.cs" />
     <Compile Include="Domain\CodeContract\AggregateRootBuilderContract.cs" />
     <Compile Include="Domain\CodeContract\AggregateRootStateBuilderContract.cs" />
+    <Compile Include="Domain\CodeContract\AggregateRootSynchronizationContextContract.cs" />
     <Compile Include="Domain\CodeContract\AggregateRootSynchronizerContract.cs" />
     <Compile Include="Domain\CodeContract\RepositoryContract.cs" />
     <Compile Include="Domain\CodeContract\StateTrackerContract.cs" />
     <Compile Include="Domain\IAggregateRootBuilder.cs" />
     <Compile Include="Domain\IAggregateRootState.cs" />
     <Compile Include="Domain\IAggregateRootStateBuilder.cs" />
+    <Compile Include="Domain\IAggregateRootSynchronizationContext.cs" />
     <Compile Include="Domain\IAggregateRootSynchronizer.cs" />
     <Compile Include="Domain\IAggregateRoot`1.cs" />
     <Compile Include="Domain\IRepository.cs" />
